--- a/public/help.html
+++ b/public/help.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Help Page</h1>
         <p>Some text here</p>
+        <img src="https://i.guim.co.uk/img/media/6ce1ac38bae5471fd2c4ce33c81018420ab8943e/0_0_3555_1486/master/3555.jpg?w=700&q=55&auto=format&usm=12&fit=max&s=5bcd437400160bb12bb6f28d8ee9cc61">
         
     </body>
 </html>
